# epallinone-linkcheck

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
deploy/: deploy.sh  linkcheck.service
src/linkcheck/: __init__.py  aia.py  checker.py  cli.py  config.py  crawler.py  db.py  report.py  scheduler.py  schema.sql
src/linkcheck/templates/: status.html.jinja
tests/: conftest.py  test_aia.py  test_checker.py  test_checker_db.py  test_checker_pool.py  test_config.py  test_crawler.py  test_db.py  test_extract_links.py  test_report.py  test_sync.py
tests/fixtures/: highschool_algebra-1-2023-update.json  highschool_index.html  homeschool_ep-math-1.json  homeschool_index.html
