[project]
name = "linkcheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "click>=8.4.2",
    "cryptography>=42.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "lxml>=6.1.1",
]

[project.scripts]
linkcheck = "linkcheck:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
